--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.9",
+    "@types/puppeteer": "^7.0.4",
     "@xyflow/react": "^12.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +49,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.4",
+    "puppeteer": "^24.4.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
