--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-query": "^5.66.9",
     "@types/puppeteer": "^7.0.4",
     "@xyflow/react": "^12.4.4",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
