--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "puppeteer": "^24.4.0",
     "react": "^18",
     "react-countup": "^6.5.3",
