--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cron-parser": "^5.0.4",
+    "cronstrue": "^2.56.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
