--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SIGN_IN_URL_FORCE_REDIRECT_URL=/setup
 
-DATABASE_URL=postgresql://postgres:Pf4206RY7TAD6cjX@db.zjaxzqgvyyvyndvwnxvq.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:Pf4206RY7TAD6cjX@db.zjaxzqgvyyvyndvwnxvq.supabase.co:5432/postgres?pgbouncer=true
 DIRECT_URL=postgresql://postgres:Pf4206RY7TAD6cjX@db.zjaxzqgvyyvyndvwnxvq.supabase.co:5432/postgres
 
 NEXT_PUBLIC_DEV_MODE=false
