--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SIGN_IN_URL_FORCE_REDIRECT_URL=/setup
 
-DATABASE_URL=postgresql://postgres:Pf4206RY7TAD6cjX@db.zjaxzqgvyyvyndvwnxvq.supabase.co:5432/postgres?pgbouncer=true
-DIRECT_URL=postgresql://postgres:Pf4206RY7TAD6cjX@db.zjaxzqgvyyvyndvwnxvq.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.zjaxzqgvyyvyndvwnxvq:Avishkar*2004@aws-0-ap-south-1.pooler.supabase.com:6543/postgres
+DIRECT_URL=postgresql://postgres.zjaxzqgvyyvyndvwnxvq:Avishkar*2004@aws-0-ap-south-1.pooler.supabase.com:5432/postgres
 
 NEXT_PUBLIC_DEV_MODE=false
 
